[project]
name = "leet"
version = "1.0rc1"
description = "Let's solve LeetCode problems with fun ⛑️"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Animenosekai", email = "animenosekai.mail@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.32",
    "markdownify>=1.2",
    "rich>=14",
    "toml>=0.10.2",
    "pycparser>=3",
    "psutil>=7",
    "beautifulsoup4>=4.14",
    "typing-extensions>=4.0.0",
]

[project.scripts]
leet = "leet.__main__:entry"

[project.urls]
Homepage = "https://github.com/Animenosekai/leet"
Documentation = "https://github.com/Animenosekai/leet/blob/main/README.md"
Repository = "https://github.com/Animenosekai/leet"
Issues = "https://github.com/Animenosekai/leet/issues"


#################################
# Linter Configuration
#################################

[tool.mypy]
show_error_context = true
show_column_numbers = true
show_error_code_links = true
pretty = true
strict = true

# Disallows
disallow_any_unimported = true
disallow_any_expr = false      # Conflicts with the fact that routes return a Coroutine with an `Any` type in its definition
disallow_any_decorated = true
disallow_any_explicit = false

# Warnings
warn_no_return = true
warn_unreachable = true
warn_incomplete_stub = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D400", # ends-in-period: Checks for docstrings in which the first line does not end in a period.
    "D415", # ends-in-punctuation: Checks for docstrings in which the first line does not end in a punctuation mark, such as a period, question mark, or exclamation point.
    "ERA001", # commented-out-code: Checks for commented-out Python code.
    "PLR0913", # too-many-arguments: Checks for function definitions that include too many arguments. The default maximum is 5.
    "C901", # complex-structure: Checks for functions with a high McCabe complexity.
    "FIX002", # line-contains-todo: Checks for "TODO" comments.
    "D212", # multi-line-summary-first-line: Checks for docstring summary lines that are not positioned on the first physical line of the docstring.
    "D203", # one-blank-line-before-class: Checks for docstrings on class definitions that are not preceded by a blank line.
    "D413", # blank-line-after-last-section: Checks for missing blank lines after the last section of a multiline docstring.
    "TD003", # missing-todo-link: Checks that a TODO comment is associated with a link to a relevant issue or ticket.
]
extend-safe-fixes = ["D200", "TID252", "ANN201"]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.pyright]
strict = ["**/*.py"]

# Enabling more rules
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImportCycles = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"

# Disabling rules
reportUnnecessaryTypeIgnoreComment = "none" # Conflicts with mypy
reportImplicitStringConcatenation = "none"
reportUnusedCallResult = "none"

[tool.uv]
managed = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
